<resources>
    <string name="app_name">MemoryEye</string>
    <string name="bottom_nav_menu_memories_text">Memories</string>
    <string name="bottom_nav_menu_camera_text">Eye</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_button_text">Get started</string>
    <string name="activity_main_textview_text">MemoryEye</string>
    <string name="activity_create_title">Title</string>
    <string name="activity_create_date">Date</string>
    <string name="activity_create_person">Person</string>
    <string name="activity_create_object">Object</string>
    <string name="activity_create_description">Description</string>
    <string name="activity_create_creator">Creator</string>
    <string name="activity_create_button_text">Create</string>
    <string name="activity_create_image_text">Images</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signin_button_text">Sign in</string>
    <string name="or_text">Or</string>
    <string name="create_text">Sign up</string>
    <string name="signup_button_text">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="sign_out_text">Sign out</string>
</resources>